responsive changes in layout

--- a/10_days_assignment/css-grid/layout-1/assets/stylesheet/main.css
+++ b/10_days_assignment/css-grid/layout-1/assets/stylesheet/main.css
@@ -55,22 +55,22 @@ body {
   font-family: 'Roboto', sans-serif; }
 
 h1 {
-  font-size: 4rem; }
-
-h2 {
-  font-size: 3.5rem; }
-
-h3 {
   font-size: 3rem; }
 
-h4 {
-  font-size: 3.5rem; }
+h2 {
+  font-size: 2.7rem; }
 
-h5 {
+h3 {
+  font-size: 2.5rem; }
+
+h4 {
   font-size: 2rem; }
 
+h5 {
+  font-size: 1.5rem; }
+
 h6 {
-  font-size: 1.4rem; }
+  font-size: 1.3rem; }
 
 p, input, button {
   font-size: 1.2rem; }
@@ -82,11 +82,11 @@ p {
   line-height: 1.5; }
 
 .header {
+  width: 100%;
   display: grid;
-  grid-template-columns: 200px 1fr;
+  grid-template-columns: 1fr 10fr;
   align-items: center;
-  background: #888;
-  padding: 1rem 2rem; }
+  background: #888; }
 
 .header img {
   height: 6rem;
@@ -101,11 +101,8 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 60% 70%;
-  color: #fff;
-  padding: 10rem 2rem; }
-
-.hero h1 {
-  font-size: 8rem; }
+  padding: 10rem 2rem;
+  color: #fff; }
 
 .header,
 .hero h1,
@@ -116,12 +113,13 @@ p {
   margin: 2rem auto;
   display: grid;
   grid-gap: 1.3rem;
-  width: 90%;
+  max-width: 90%;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); }
 
 .img {
   display: grid;
   height: 40vh;
+  width: 100%;
   position: relative;
   background-origin: silver;
   align-items: end; }
@@ -158,7 +156,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover; }
 
-@media all and (min-width: 320px) and (max-width: 1000px) {
+@media all and (max-width: 900px) {
   :root {
     font-size: 8px; }
 
@@ -166,10 +164,16 @@ p {
     grid-template-columns: 6rem 1fr; }
 
   .img-sec {
-    width: 100%;
-    margin: 0; }
+    max-width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); }
 
   .hero {
     grid-template-columns: repeat(auto-fit, minmax(100%, 1fr)); } }
+@media all and (max-width: 320px) {
+  .img-sec {
+    width: 100%;
+    margin: 0;
+    grid-gap: 0;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); } }
 
 /*# sourceMappingURL=main.css.map */
