--- a/10_days_assignment/css-grid/layout-2/assets/stylesheet/main.css
+++ b/10_days_assignment/css-grid/layout-2/assets/stylesheet/main.css
@@ -75,14 +75,10 @@ h6 {
 p, input, button {
   font-size: 1.2rem; }
 
-h1, h2, h3, h4, h5, h6, p {
-  margin: 0.5rem 0; }
-
 p {
   line-height: 1.5; }
 
 img {
-  height: 100%;
   width: 100%; }
 
 a {
@@ -92,9 +88,10 @@ a {
 .header {
   width: 100vw;
   display: grid;
-  grid-template-columns: 1fr 10fr;
+  grid-template-columns: 2fr 10fr;
   align-items: center;
   grid-auto-flow: column;
+  padding: 1rem 0;
   background-color: gray;
   color: #ebd98b; }
 
@@ -108,19 +105,54 @@ a {
 
 .hero {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr)); }
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-row: repeat(6, 1fr); }
 
 .content {
   align-self: stretch;
   background: rgba(0, 0, 0, 0.8);
-  padding: 1rem 0 0 2rem; }
+  padding: 1rem 0 0 2rem;
+  color: #f3f3f3; }
 
 .item {
   display: grid;
-  height: 40vh; }
+  align-items: stretch; }
 
-@media all and (min-width: 320px) and (max-width: 100px) {
+.item1 {
+  grid-column: 1/ span 2;
+  grid-row: 1/ span 2; }
+
+.item2 {
+  grid-column: 3/ span 3;
+  grid-row: 1/ span 2; }
+
+.item5 {
+  grid-column: 1/ span 1;
+  grid-row: 3/ span 2; }
+
+.item7 {
+  grid-column: 3/ span 2;
+  grid-row: 3/ span 2; }
+
+.item8 {
+  grid-column: 5/ span 2;
+  grid-row: 3/ span 2; }
+
+.item9 {
+  grid-column: 1/ span 2;
+  grid-row: 4/ span 2; }
+
+@media all and (max-width: 900px) {
   :root {
-    font-size: 8px; } }
+    font-size: 8px; }
+
+  .hero {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); } }
+@media all and (max-width: 300px) {
+  .hero {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); } }
 
 /*# sourceMappingURL=main.css.map */
