--- a/10_days_assignment/css-grid/layout-2/assets/stylesheet/main.scss
+++ b/10_days_assignment/css-grid/layout-2/assets/stylesheet/main.scss
@@ -68,7 +68,7 @@ body {
 }
 
 h1 {
-	font-size: 3rem;
+	font-size: 4rem;
 }
 h2 {
 	font-size: 3.5rem;
@@ -89,7 +89,7 @@ p, input, button {
 	font-size: 1.2rem;
 }
 h1, h2, h3, h4, h5, h6, p {
-	margin: 0.5rem 0;
+	// margin: 0.5rem 0;
 }
  
 p {
@@ -113,10 +113,11 @@ a {
 .header {
 	width: 100vw;
 	display: grid;
-	grid-template-columns: 1fr 10fr;
+	grid-template-columns: 2fr 10fr;
 	align-items: center;
 	grid-auto-flow: column;
 	// background: #f3f3f3;
+	padding: 1rem 0;
 	background-color: gray;
 	color: #ebd98b;
 }
@@ -137,14 +138,24 @@ a {
 // ==============================================
 
 
+// .hero {
+// 	display: grid;
+// 	grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+// }
+
 .hero {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(3, 1fr));
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-row: repeat(6, 1fr);
 }
+
 .content {
 	align-self: stretch;
 	background: rgba(0,0,0,0.8);
 	padding: 1rem 0 0 2rem;
+	color: #f3f3f3;
+
 }
 
 
@@ -154,16 +165,44 @@ a {
 
 .item {
 	display: grid;
-	height: 40vh;
+	align-items: stretch;
+}
+
+.item1 {
+	grid-column: 1/ span 2;
+	grid-row: 1/ span 2;
 }
 
 .item2 {
-
+	grid-column: 3/ span 3;
+	grid-row: 1/ span 2;
 }
 
-.item3 {
-	// grid-template-rows: 1fr 1fr;
+.item5 {
+	grid-column: 1/ span 1;
+	grid-row: 3/ span 2;
 }
+
+.item7 {
+	grid-column: 3/ span 2;
+	grid-row: 3/ span 2;
+}
+
+.item8 {
+	grid-column: 5/ span 2;
+	grid-row: 3/ span 2;
+}
+
+.item9 {
+	grid-column: 1/ span 2;
+	grid-row: 4/ span 2;
+}
+// .item {
+// 	grid-column: 4/ span 3;
+// 	grid-row: 5/ span 2;
+// }
+
+
 
 
 
@@ -172,8 +211,20 @@ a {
 // ==============================================
 
 
-@media all and (min-width:320px) and (max-width: 900px) {
+@media all and (max-width: 900px) {
 	:root {
 		font-size: 8px;
 	}
+
+	.hero {
+ 		display: grid;
+	 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+ 	}
+}
+
+@media all and (max-width: 300px) {
+	.hero {
+ 		display: grid;
+	 	grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+ 	}
 }
