--- a/10_days_assignment/css-grid/layout-2/assets/stylesheet/main.css
+++ b/10_days_assignment/css-grid/layout-2/assets/stylesheet/main.css
@@ -106,8 +106,8 @@ a {
 .hero {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-row: repeat(6, 1fr); }
+  grid-template-row: repeat(6, 1fr);
+  grid-auto-flow: row; }
 
 .content {
   align-self: stretch;
@@ -131,6 +131,10 @@ a {
   grid-column: 1/ span 1;
   grid-row: 3/ span 2; }
 
+.item6 {
+  grid-column: 2;
+  grid-row: 3/ span 2; }
+
 .item7 {
   grid-column: 3/ span 2;
   grid-row: 3/ span 2; }
@@ -141,7 +145,15 @@ a {
 
 .item9 {
   grid-column: 1/ span 2;
-  grid-row: 4/ span 2; }
+  grid-row: 5/ span 2; }
+
+.item10 {
+  grid-column: 3;
+  grid-row: 5/ span 2; }
+
+.item11 {
+  grid-column: 4/ span 3;
+  grid-row: 5/ span 2; }
 
 @media all and (max-width: 900px) {
   :root {
@@ -149,7 +161,10 @@ a {
 
   .hero {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); } }
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); }
+
+  .item {
+    display: grid; } }
 @media all and (max-width: 300px) {
   .hero {
     display: grid;
