--- a/10_days_assignment/css-grid/layout-2/assets/stylesheet/main.scss
+++ b/10_days_assignment/css-grid/layout-2/assets/stylesheet/main.scss
@@ -146,8 +146,9 @@ a {
 .hero {
 	display: grid;
 	grid-template-columns: repeat(6, 1fr);
-	grid-template-columns: repeat(6, 1fr);
+	// grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	grid-template-row: repeat(6, 1fr);
+	grid-auto-flow: row;
 }
 
 .content {
@@ -162,6 +163,7 @@ a {
 // ==============================================
 								// img gallery
 // ==============================================
+
 
 .item {
 	display: grid;
@@ -183,6 +185,11 @@ a {
 	grid-row: 3/ span 2;
 }
 
+.item6 {
+	grid-column: 2;
+	grid-row: 3/ span 2;
+}
+
 .item7 {
 	grid-column: 3/ span 2;
 	grid-row: 3/ span 2;
@@ -195,20 +202,23 @@ a {
 
 .item9 {
 	grid-column: 1/ span 2;
-	grid-row: 4/ span 2;
+	grid-row: 5/ span 2;
 }
-// .item {
-// 	grid-column: 4/ span 3;
-// 	grid-row: 5/ span 2;
-// }
 
-
-
+.item10 {
+	grid-column: 3;
+	grid-row: 5/ span 2;
+}
+.item11 {
+	grid-column: 4/ span 3;
+	grid-row: 5/ span 2;
+}
 
 
 // ==============================================
 								// media query
 // ==============================================
+
 
 
 @media all and (max-width: 900px) {
@@ -220,6 +230,10 @@ a {
  		display: grid;
 	 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  	}
+
+ 	.item {
+		display: grid;
+	}
 }
 
 @media all and (max-width: 300px) {
