--- a/10_days_assignment/css-grid/layout-4/assets/stylesheet/main.css
+++ b/10_days_assignment/css-grid/layout-4/assets/stylesheet/main.css
@@ -95,24 +95,23 @@ aside {
 .container {
   height: 100vh;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(12, 1fr);
-  grid-template-areas: 'header header header' 'left 	mid 	right' 'footer footer footer'; }
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 5fr 1fr;
+  grid-template-areas: "header header header" "left 	mid 	right" "footer footer footer"; }
 
 .header {
-  grid-column: 1/ -1;
-  grid-row: 1/span 2;
   color: #ffff;
   text-transform: capitalize;
   text-align: center; }
 
 .header {
+  display: grid;
+  align-items: center;
   grid-area: header;
   background-color: green; }
 
 .left-nav {
   grid-area: left;
-  height: 80vh;
   background-color: tomato; }
 
 .mid-sec {
@@ -128,23 +127,36 @@ aside {
   grid-area: footer;
   background-color: skyblue; }
 
+.header,
+.footer {
+  display: grid;
+  align-items: center;
+  text-transform: capitalize; }
+
 @media all and (max-width: 900px) {
   :root {
     font-size: 8px; }
 
-  .contaner {
-    grid-template-areas: 'header header header' 'left left left' 'mid mid mid' 'right right right' 'footer footer footer'; }
-    .contaner .header {
-      grid-area: header;
-      grid-column: 1 / -1; }
-    .contaner .left-nav {
-      grid-area: left;
-      grid-column: 1 / -1; }
-    .contaner .right-nav {
+  .container {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas: "header 	header 	header" "left 		left 		left" "mid 			mid 		mid" "right 		right 	right" "footer 	footer 	footer"; }
+    .container .header {
+      grid-area: header; }
+    .container .left-nav {
+      grid-area: left; }
+    .container .right-nav {
       grid-area: right; }
-    .contaner .mid-sec {
-      grid-area: mid; }
-    .contaner .footer {
-      grid-area: footer; } }
+    .container .mid-sec {
+      grid-area: mid;
+      width: 100vw; }
+    .container .footer {
+      grid-area: footer;
+      text-align: center; }
+    .container .right-nav,
+    .container .left-nav {
+      display: grid;
+      align-content: center !important;
+      width: auto; } }
 
 /*# sourceMappingURL=main.css.map */
