--- a/10_days_assignment/animation/layout-1/assets/stylesheet/main.css
+++ b/10_days_assignment/animation/layout-1/assets/stylesheet/main.css
@@ -2,24 +2,21 @@
 @import url(https://fonts.googleapis.com/css?family=Pacifico);
 body {
   font-family: "Lato", Helvetica, Arial;
-  font-size: 16px;
-}
+  font-size: 16px; }
 
 *, *:before, *:after {
   -webkit-border-sizing: border-box;
   -moz-border-sizing: border-box;
-  border-sizing: border-box;
-}
+  border-sizing: border-box; }
 
 .container {
   width: 350px;
-  margin: 50px auto;
-}
+  margin: 50px auto; }
+
 .container > ul {
   list-style: none;
   padding: 0;
-  margin: 0 0 20px 0;
-}
+  margin: 0 0 20px 0; }
 
 .title {
   font-family: 'Pacifico';
@@ -27,15 +24,14 @@ body {
   font-size: 40px;
   text-align: center;
   line-height: 1.4;
-  color: #C0392B;
-}
+  color: #C0392B; }
 
 .dropdown {
-  position: relative;
-}
+  position: relative; }
+
 .dropdown a {
-  text-decoration: none;
-}
+  text-decoration: none; }
+
 .dropdown [data-toggle="dropdown"] {
   display: block;
   color: white;
@@ -44,11 +40,11 @@ body {
   -webkit-box-shadow: 0 1px 0 #d65548 inset, 0 -1px 0 #962d22 inset;
   box-shadow: 0 1px 0 #d65548 inset, 0 -1px 0 #962d22 inset;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
-  padding: 10px;
-}
+  padding: 10px; }
+
 .dropdown [data-toggle="dropdown"]:hover {
-  background: #cd3d2e;
-}
+  background: #cd3d2e; }
+
 .dropdown [data-toggle="dropdown"]:before {
   position: absolute;
   display: block;
@@ -64,8 +60,8 @@ body {
   -moz-transition: -moz-transform 0.6s;
   -o-transition: -o-transform 0.6s;
   -webkit-transition: -webkit-transform 0.6s;
-  transition: transform 0.6s;
-}
+  transition: transform 0.6s; }
+
 .dropdown > .dropdown-menu {
   max-height: 0;
   overflow: hidden;
@@ -86,11 +82,11 @@ body {
   transition: max-height 0.6s ease-out;
   animation: hideAnimation 0.4s ease-out;
   -moz-animation: hideAnimation 0.4s ease-out;
-  -webkit-animation: hideAnimation 0.4s ease-out;
-}
+  -webkit-animation: hideAnimation 0.4s ease-out; }
+
 .dropdown > .dropdown-menu li {
-  padding: 0;
-}
+  padding: 0; }
+
 .dropdown > .dropdown-menu li a {
   display: block;
   color: #6f6f6f;
@@ -99,11 +95,11 @@ body {
   -webkit-box-shadow: 0 1px 0 white inset, 0 -1px 0 #d5d5d5 inset;
   box-shadow: 0 1px 0 white inset, 0 -1px 0 #d5d5d5 inset;
   text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.3);
-  padding: 10px 10px;
-}
+  padding: 10px 10px; }
+
 .dropdown > .dropdown-menu li a:hover {
-  background: #f6f6f6;
-}
+  background: #f6f6f6; }
+
 .dropdown > input[type="checkbox"] {
   opacity: 0;
   display: block;
@@ -111,8 +107,8 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  cursor: pointer;
-}
+  cursor: pointer; }
+
 .dropdown > input[type="checkbox"]:checked ~ .dropdown-menu {
   max-height: 9999px;
   display: block;
@@ -126,8 +122,8 @@ body {
   -moz-transition: max-height 2s ease-in-out;
   -o-transition: max-height 2s ease-in-out;
   -webkit-transition: max-height 2s ease-in-out;
-  transition: max-height 2s ease-in-out;
-}
+  transition: max-height 2s ease-in-out; }
+
 .dropdown > input[type="checkbox"]:checked + a[data-toggle="dropdown"]:before {
   -moz-transform: rotate(-180deg);
   -ms-transform: rotate(-180deg);
@@ -136,216 +132,178 @@ body {
   -moz-transition: -moz-transform 0.6s;
   -o-transition: -o-transform 0.6s;
   -webkit-transition: -webkit-transform 0.6s;
-  transition: transform 0.6s;
-}
+  transition: transform 0.6s; }
 
 @keyframes showAnimation {
   0% {
     -moz-transform: scaleY(0.1);
     -ms-transform: scaleY(0.1);
     -webkit-transform: scaleY(0.1);
-    transform: scaleY(0.1);
-  }
+    transform: scaleY(0.1); }
   40% {
     -moz-transform: scaleY(1.04);
     -ms-transform: scaleY(1.04);
     -webkit-transform: scaleY(1.04);
-    transform: scaleY(1.04);
-  }
+    transform: scaleY(1.04); }
   60% {
     -moz-transform: scaleY(0.98);
     -ms-transform: scaleY(0.98);
     -webkit-transform: scaleY(0.98);
-    transform: scaleY(0.98);
-  }
+    transform: scaleY(0.98); }
   80% {
     -moz-transform: scaleY(1.04);
     -ms-transform: scaleY(1.04);
     -webkit-transform: scaleY(1.04);
-    transform: scaleY(1.04);
-  }
+    transform: scaleY(1.04); }
   100% {
     -moz-transform: scaleY(0.98);
     -ms-transform: scaleY(0.98);
     -webkit-transform: scaleY(0.98);
-    transform: scaleY(0.98);
-  }
+    transform: scaleY(0.98); }
   80% {
     -moz-transform: scaleY(1.02);
     -ms-transform: scaleY(1.02);
     -webkit-transform: scaleY(1.02);
-    transform: scaleY(1.02);
-  }
+    transform: scaleY(1.02); }
   100% {
     -moz-transform: scaleY(1);
     -ms-transform: scaleY(1);
     -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-  }
-}
+    transform: scaleY(1); } }
 @-moz-keyframes showAnimation {
   0% {
     -moz-transform: scaleY(0.1);
     -ms-transform: scaleY(0.1);
     -webkit-transform: scaleY(0.1);
-    transform: scaleY(0.1);
-  }
+    transform: scaleY(0.1); }
   40% {
     -moz-transform: scaleY(1.04);
     -ms-transform: scaleY(1.04);
     -webkit-transform: scaleY(1.04);
-    transform: scaleY(1.04);
-  }
+    transform: scaleY(1.04); }
   60% {
     -moz-transform: scaleY(0.98);
     -ms-transform: scaleY(0.98);
     -webkit-transform: scaleY(0.98);
-    transform: scaleY(0.98);
-  }
+    transform: scaleY(0.98); }
   80% {
     -moz-transform: scaleY(1.04);
     -ms-transform: scaleY(1.04);
     -webkit-transform: scaleY(1.04);
-    transform: scaleY(1.04);
-  }
+    transform: scaleY(1.04); }
   100% {
     -moz-transform: scaleY(0.98);
     -ms-transform: scaleY(0.98);
     -webkit-transform: scaleY(0.98);
-    transform: scaleY(0.98);
-  }
+    transform: scaleY(0.98); }
   80% {
     -moz-transform: scaleY(1.02);
     -ms-transform: scaleY(1.02);
     -webkit-transform: scaleY(1.02);
-    transform: scaleY(1.02);
-  }
+    transform: scaleY(1.02); }
   100% {
     -moz-transform: scaleY(1);
     -ms-transform: scaleY(1);
     -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-  }
-}
+    transform: scaleY(1); } }
 @-webkit-keyframes showAnimation {
   0% {
     -moz-transform: scaleY(0.1);
     -ms-transform: scaleY(0.1);
     -webkit-transform: scaleY(0.1);
-    transform: scaleY(0.1);
-  }
+    transform: scaleY(0.1); }
   40% {
     -moz-transform: scaleY(1.04);
     -ms-transform: scaleY(1.04);
     -webkit-transform: scaleY(1.04);
-    transform: scaleY(1.04);
-  }
+    transform: scaleY(1.04); }
   60% {
     -moz-transform: scaleY(0.98);
     -ms-transform: scaleY(0.98);
     -webkit-transform: scaleY(0.98);
-    transform: scaleY(0.98);
-  }
+    transform: scaleY(0.98); }
   80% {
     -moz-transform: scaleY(1.04);
     -ms-transform: scaleY(1.04);
     -webkit-transform: scaleY(1.04);
-    transform: scaleY(1.04);
-  }
+    transform: scaleY(1.04); }
   100% {
     -moz-transform: scaleY(0.98);
     -ms-transform: scaleY(0.98);
     -webkit-transform: scaleY(0.98);
-    transform: scaleY(0.98);
-  }
+    transform: scaleY(0.98); }
   80% {
     -moz-transform: scaleY(1.02);
     -ms-transform: scaleY(1.02);
     -webkit-transform: scaleY(1.02);
-    transform: scaleY(1.02);
-  }
+    transform: scaleY(1.02); }
   100% {
     -moz-transform: scaleY(1);
     -ms-transform: scaleY(1);
     -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-  }
-}
+    transform: scaleY(1); } }
 @keyframes hideAnimation {
   0% {
     -moz-transform: scaleY(1);
     -ms-transform: scaleY(1);
     -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-  }
+    transform: scaleY(1); }
   60% {
     -moz-transform: scaleY(0.98);
     -ms-transform: scaleY(0.98);
     -webkit-transform: scaleY(0.98);
-    transform: scaleY(0.98);
-  }
+    transform: scaleY(0.98); }
   80% {
     -moz-transform: scaleY(1.02);
     -ms-transform: scaleY(1.02);
     -webkit-transform: scaleY(1.02);
-    transform: scaleY(1.02);
-  }
+    transform: scaleY(1.02); }
   100% {
     -moz-transform: scaleY(0);
     -ms-transform: scaleY(0);
     -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-  }
-}
+    transform: scaleY(0); } }
 @-moz-keyframes hideAnimation {
   0% {
     -moz-transform: scaleY(1);
     -ms-transform: scaleY(1);
     -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-  }
+    transform: scaleY(1); }
   60% {
     -moz-transform: scaleY(0.98);
     -ms-transform: scaleY(0.98);
     -webkit-transform: scaleY(0.98);
-    transform: scaleY(0.98);
-  }
+    transform: scaleY(0.98); }
   80% {
     -moz-transform: scaleY(1.02);
     -ms-transform: scaleY(1.02);
     -webkit-transform: scaleY(1.02);
-    transform: scaleY(1.02);
-  }
+    transform: scaleY(1.02); }
   100% {
     -moz-transform: scaleY(0);
     -ms-transform: scaleY(0);
     -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-  }
-}
+    transform: scaleY(0); } }
 @-webkit-keyframes hideAnimation {
   0% {
     -moz-transform: scaleY(1);
     -ms-transform: scaleY(1);
     -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-  }
+    transform: scaleY(1); }
   60% {
     -moz-transform: scaleY(0.98);
     -ms-transform: scaleY(0.98);
     -webkit-transform: scaleY(0.98);
-    transform: scaleY(0.98);
-  }
+    transform: scaleY(0.98); }
   80% {
     -moz-transform: scaleY(1.02);
     -ms-transform: scaleY(1.02);
     -webkit-transform: scaleY(1.02);
-    transform: scaleY(1.02);
-  }
+    transform: scaleY(1.02); }
   100% {
     -moz-transform: scaleY(0);
     -ms-transform: scaleY(0);
     -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-  }
-}
+    transform: scaleY(0); } }
+
+/*# sourceMappingURL=main.css.map */
