add main-sec top-btm padding

--- a/10_days_assignment/css-grid/layout-3/assets/stylesheet/main.css
+++ b/10_days_assignment/css-grid/layout-3/assets/stylesheet/main.css
@@ -79,7 +79,8 @@ a {
   text-decoration: none; }
 
 main {
-  background-color: #34495E; }
+  background-color: #34495E;
+  padding: 1rem 0 5rem 0; }
 
 .wrapper {
   max-width: 1500px;
