--- a/10_days_assignment/final-project/assets/stylesheet/_general.scss
+++ b/10_days_assignment/final-project/assets/stylesheet/_general.scss
@@ -36,6 +36,10 @@ h6 {
 	font-size: 1.7rem;
 }
 
+span {
+	font-weight: 600;
+}
+
 p {
 	font-size: 1.6rem;
 	color: $primary-clr;
@@ -59,8 +63,10 @@ p {
 }
 
 button {
+	font-size: 1.6rem;
 	outline: 0;
 	background-color: transparent;
+	text-transform: capitalize;
 }
 
 b, strong {
@@ -75,4 +81,18 @@ i, em {
 img {
 	width: 100%;
 	height: 100%;
+}
+
+input, textarea, button {
+	display: block;
+	margin: 2rem 0;
+	border: none;
+	outline: 0;
+	color:$primary-clr; 
+}
+
+
+::-webkit-input-placeholder {
+	text-transform: capitalize;
+	color: $primary-clr;
 }
